--- a/01-tools/08-imaginary/index.html
+++ b/01-tools/08-imaginary/index.html
@@ -99,8 +99,8 @@
         <p>
           It's not `+3` and its not `-3`, but a `3` must be involved somewhere &mdash; and herein lies the problem.
         </p>
-        <p>
-          <b><i>The answer involves a kind of number you cannot count to.</i></b>
+        <p style="font-weight: bold; font-style: italic; text-align:center;">
+          The answer is that we must accept the existence<br>of a kind of number we cannot count to
         </p>
         <p>
           If this makes your brain hurt, then don't worry &mdash; you're in good company.
@@ -124,11 +124,12 @@
         <p>
           <a href="https://en.wikipedia.org/wiki/Ren%C3%A9_Descartes" target="_new">Ren&eacute; Descartes</a> was one of
           many mathematicians who found these quantites deeply perplexing.
-          Like so many of his contemporaries, he was unwilling to accept the intellectual discomfort created by a
-          quantity that appeared to have no direct applicability in the material world.
+          Like so many of his contemporaries, he was unwilling to accept the intellectual discomfort created by a having
+          to work with a quantity that appeared to have no direct applicability in the material world.
         </p>
         <p>
-          I can hold `1` apple in my hand, but what does it mean to say <i>"I am holding `sqrt (-1)` apples"</i>?
+          It is easy to comprehend the statement <i>"I am holding `1` apple</i>, but what does it mean to say <i>"I am
+            holding `sqrt (-1)` apples"</i>?
         </p>
         <p>
           Exactly how many apples is that?
@@ -164,12 +165,18 @@
           `sqrt (-1)` every time we want to refer to this quantity, mathematicians just use the letter `i` (physicists
           and electrical engineers however, tend to use the letter `j` instead).
         </p>
+        <p>
+          `i` is awkward to work with for the simple reason that our normal rules of arithmetic apply only to real
+          numbers: and `i` is not real.
+          So if we have to combine real numbers with imaginary numbers, then most of the time, we must simply accept the
+          presence of `i`.
+        </p>
         <table>
           <tr>
             <td style="vertical-align: top;">
               <p>
-                When you multiply this imaginary number `i` by itself, depending on the number of multiplications you
-                perform, the answer alternates between a real number (that is, one you can count to such as `+1` or
+                However, when you multiply this imaginary number `i` by itself, depending on the number of operations
+                you perform, the answer alternates between a real number (that is, one you can count to such as `+1` or
                 `-1`) and another imaginary number (such as `i` or `-i`).
               </p>
               <p>
@@ -194,11 +201,11 @@
               <div id="imagRotBox" class="imagRotBox"></div>
             </td>
           </tr>
+          <tr>
+            <td colspan="2">This turns out to be an extremely useful property.</td>
+          </tr>
         </table>
       </td>
-    </tr>
-
-    </td>
     </tr>
   </table>
   <script type="text/javascript" src="./main.js"></script>
