--- a/01-tools/11-complex-arith/index.html
+++ b/01-tools/11-complex-arith/index.html
@@ -183,7 +183,7 @@
         <h2>Division</h2>
         <p>
           The basic problem with complex division is that our rules of arthmetic are unable to tell us how many times
-          `sqrt (-1)` divides into a real number.
+          the imaginary number `sqrt (-1)` divides into a real number.
           So if we encounter a term such as `3/(2i)`, then we're completely stuck.
         </p>
         <p>
