Use area method to explain conjugate multiplication

--- a/01-tools/11-complex-arith/index.html
+++ b/01-tools/11-complex-arith/index.html
@@ -205,38 +205,34 @@
         <p>
           When you multiply a complex number by its conjugate, all the `i`'s go away!
           And it is formed simply by reversing the sign of the imaginary term.
-        </p>
-        <p>
           So the complex conjugate of `(3+4i)` is simply `(3-4i)`.
         </p>
         <p>
           Let's see what happens when we multiply `(3+4i)` by its conjugate `(3-4i)`
         </p>
-        <p>
-          By applying the FOIL rule, we get:
-        </p>
-        <table class="eq-sequence">
+        <table>
           <tr>
-            <td></td>
-            <td>`(3+4i) * (3-4i)`</td>
+            <td>
+              Using the area method, we separate the two complex numbers into their real and imaginary parts.
+            </td>
+            <td><img src="/img/Conjugate1.png"></td>
           </tr>
           <tr>
-            <td>`=>`</td>
-            <td>`(3 * 3) + (3 * -4i) + (3 * 4i) + (4i * -4i)`</td>
+            <td>
+              Multiply the row and column values together&hellip;
+            </td>
+            <td><img src="/img/Conjugate2.png"></td>
           </tr>
           <tr>
-            <td>`=>`</td>
-            <td>`9 - 12i + 12i - 16i^2`</td>
-          </tr>
-          <tr>
-            <td>`=>`</td>
-            <td>`9 + 16`</td>
-          </tr>
-          <tr>
-            <td>`=>`</td>
-            <td>`25`</td>
+            <td>
+              When we add up all 4 values, we can see that the two imaginary parts cancel out, leaving only `9 + 16`
+            </td>
+            <td><img src="/img/Conjugate3.png"></td>
           </tr>
         </table>
+        <p>
+          So `(3+4i) ** (3-4i) = 25`
+        </p>
         <p>
           Ok, that's nice, but how does it help us with division?
         </p>
